--- a/stories/Molecules/Navbar/Menu/menu.scss
+++ b/stories/Molecules/Navbar/Menu/menu.scss
@@ -6,6 +6,30 @@
 
   li {
     display: inline-block;
-    margin: 10px;
+    margin: 12px;
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+[dir='rtl'] {
+  .menu__wrapper {
+    li {
+      a {
+        margin: 0;
+      }
+      &:first-child {
+        margin-right: 0;
+        margin-left: 12px;
+      }
+      &:last-child {
+        margin-left: 0;
+        margin-right: 12px;
+      }
+    }
   }
 }
